# gsCInterface

./: .gitignore  CMakeLists.txt  README.md
examples/: basis_cexample.c  geometry_cexample.c  geometry_fexample.F90
filedata/: sw_tp.xml
plugins/Julia/: gismo_benchmark.jl
plugins/Julia/Gismo/docs/: make.jl
plugins/Julia/Gismo/docs/src/: gsHSplines.md
plugins/Julia/Gismo/src/: gsCore.jl  gsHSplines.jl  gsMatrix.jl  gsNurbs.jl
plugins/Julia/examples/: BSpline_example.jl  THBSpline_example.jl  TensorBSpline_example.jl  gismo_example.jl
plugins/MATLAB/: CMakeLists.txt  instructions.txt
plugins/MATLAB/examples/: THBSpline_example.m  TensorBSpline_example.m
plugins/MATLAB/src/gsCore/: gsBasis.m
plugins/MATLAB/src/gsHSplines/: gsTHBSpline.m
plugins/MATLAB/src/gsNurbs/: gsNurbsBasis.m  gsTensorBSplineBasis.m
src/: Cgismo.h  Cgismo.h.in  Fgismo.F90  gismo.ifc  gsCBasis.cpp  gsCBasis.h  gsCBasis.ifc  gsCBoundaryConditions.cpp  gsCBoundaryConditions.h  gsCFitting.cpp  gsCFitting.h  gsCFunctionExpr.cpp  gsCFunctionExpr.h  gsCFunctionSet.cpp  gsCFunctionSet.h  gsCFunctionSet.ifc  gsCGeometry.cpp  gsCGeometry.h  gsCGeometry.ifc  gsCGeometryTransform.cpp  gsCGeometryTransform.h  gsCGeometryTransform.ifc  gsCGridIteratorCube.h  gsCHelpers.cpp  gsCHelpers.h  gsCInterface.cpp  gsCInterface.h  gsCKnotVector.cpp  gsCKnotVector.h  gsCKnotVector.ifc  gsCL2Projection.cpp  gsCL2Projection.h  gsCMatrix.cpp  gsCMatrix.h  gsCMatrix.ifc  gsCMatrixInt.cpp  gsCMatrixInt.h  gsCMatrixInt.ifc  gsCMemory.cpp  gsCMemory.h  (+28 more)
